client/src/main/resources/client/stylesheets/card/Card.css
#mainVBox {
    -fx-border-radius: 10;
    -fx-border-color: black;
    -fx-background-radius: 10;
    -fx-pref-height: 50;
    -fx-background-color: #93BFCF;
}


#mainVBox:hover{
    -fx-border-radius: 10;
    -fx-border-color: yellow;
    -fx-background-radius: 10;
    -fx-pref-height: 50;
    -fx-background-color: #93BFCF;
}

.arrows{
    -fx-font-size: 10px;
    -fx-background-color: transparent;
    -fx-text-fill: black;
    -fx-border-radius: 20;
    -fx-border-color: #000000;
    -fx-border-width: 2;
    -fx-background-radius: 20;
}

.deleteSubTaskButton{
    -fx-font-size: 10px;
    -fx-background-color: #FD3318;
    -fx-text-fill: black;
    -fx-border-radius: 20;
    -fx-border-color: #000000;
    -fx-border-width: 2;
    -fx-background-radius: 20;
}

#tagInCardContainerView{
    -fx-padding: 0 0 0 0;
    -fx-background-color: transparent;
}

#tagInCardContainerView .scroll-bar:horizontal .increment-arrow,
#tagInCardContainerView .scroll-bar:horizontal .decrement-arrow,
#tagInCardContainerView .scroll-bar:horizontal .increment-button,
#tagInCardContainerView .scroll-bar:horizontal .decrement-button {
    -fx-padding:0;
}

#tagInCardContainer{
    -fx-border-width: 0;
    -fx-padding: 0 0 0 0;
}

